--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "About"
       href: about.html
+    - text: "Dashboard"
+      href: Dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<jg5037@cumc.columbia.edu>
     - icon: fa-github fa-lg
